// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RunElementVisualController if data not ready, show waiting 1`] = `
<button
  className="ant-btn css-dev-only-do-not-override-p7e5j5 ant-btn-default"
  disabled={true}
  onClick={[Function]}
  style={Object {}}
  type="button"
>
  <span>
    运 行
  </span>
  
</button>
`;

exports[`RunElementVisualController if data ready, show run button 1`] = `
<button
  className="ant-btn css-dev-only-do-not-override-p7e5j5 ant-btn-default"
  disabled={false}
  onClick={[Function]}
  style={Object {}}
  type="button"
>
  <span>
    运 行
  </span>
  
</button>
`;
